# EnergyTradingAnalysis

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  flake.nix  modelling.py  outfile.csv  package.json  price_dk_2023.csv  price_dk_2024.csv  pyproject.toml  requirements.txt  setup.bat  setup.sh  test_csv_health.py
.github/workflows/: docker-build.yml  update-data.yml
data/: features.csv  price_dk_2025.csv  spotprice_2024_2025.csv
data/AT/: AT.csv  AT_forecast.csv  AT_ma.csv
data/BE/: BE.csv  BE_forecast.csv  BE_generation.csv  BE_ma.csv
data/CH/: CH.csv  CH_forecast.csv  CH_generation.csv  CH_ma.csv
data/CZ/: CZ.csv  CZ_forecast.csv  CZ_ma.csv
data/DE_LU/: DE_LU.csv  DE_LU_backtest.csv  DE_LU_forecast.csv  DE_LU_forecasts.csv  DE_LU_load_forecast.csv  DE_LU_ma.csv  DE_LU_metrics.csv  DE_LU_renewables_forecast.csv
data/DK_1/: DK_1.csv  DK_1_forecast.csv  DK_1_generation.csv  DK_1_ma.csv
data/DK_2/: DK_2.csv  DK_2_backtest.csv  DK_2_forecast.csv  DK_2_forecasts.csv  DK_2_generation.csv  DK_2_load_forecast.csv  DK_2_ma.csv  DK_2_metrics.csv  DK_2_renewables_forecast.csv
data/EE/: EE.csv  EE_forecast.csv  EE_generation.csv  EE_ma.csv
data/ES/: ES.csv  ES_forecast.csv  ES_ma.csv
data/FI/: FI.csv  FI_forecast.csv  FI_ma.csv
data/FR/: FR.csv  FR_forecast.csv  FR_ma.csv
data/GR/: GR.csv  GR_forecast.csv  GR_generation.csv  GR_ma.csv
data/LT/: LT.csv  LT_forecast.csv  LT_generation.csv  LT_ma.csv
data/LV/: LV.csv  LV_forecast.csv  LV_generation.csv  LV_ma.csv
data/NL/: NL.csv  NL_forecast.csv  NL_ma.csv
data/NO_1/: NO_1.csv  NO_1_forecast.csv  NO_1_generation.csv  NO_1_ma.csv
data/NO_2/: NO_2.csv  NO_2_forecast.csv  NO_2_generation.csv  NO_2_ma.csv
data/RO/: RO.csv  RO_forecast.csv  RO_ma.csv
data/SE_3/: SE_3.csv  SE_3_forecast.csv  SE_3_generation.csv  SE_3_ma.csv
data/SE_4/: SE_4.csv  SE_4_backtest.csv  SE_4_forecast.csv  SE_4_forecasts.csv  (+5 more)
doc/: index.html  report_AT.html  report_BE.html  report_CH.html  report_CZ.html  report_DE_LU.html  report_DK_1.html  report_DK_2.html  report_EE.html  report_ES.html  report_FI.html  report_FR.html  report_GR.html  report_LT.html  report_LV.html  report_NL.html  report_NO_1.html  report_NO_2.html  report_RO.html  report_SE_3.html  report_SE_4.html  report_SK.html
docs/: CNAME  about.html  index.html  report_AT.html  report_BE.html  report_CH.html  report_CZ.html  report_DE_LU.html  report_DK_1.html  report_DK_2.html  report_EE.html  report_ES.html  report_FI.html  report_FR.html  report_GR.html  report_LT.html  report_LV.html  report_NL.html  report_NO_1.html  report_NO_2.html  report_RO.html  report_SE_3.html  report_SE_4.html  report_SK.html
notebooks/: forecasting_benchmark.ipynb
output/: report_AT.html  report_BE.html  report_CH.html  report_CZ.html  report_DE_LU.html  report_DK_1.html  report_DK_2.html  report_EE.html  report_ES.html  report_FI.html  report_FR.html  report_GR.html  report_LT.html  report_LV.html  report_NL.html  report_NO_1.html  report_NO_2.html  report_RO.html  report_SE_3.html  report_SE_4.html  report_SK.html
scripts/: setup.bat  setup.sh
src/: analysis.py  app_panel.py  backtest.py  config.py  country_codes.csv  dataanalysis.py  datamanager.py  exceptions.py  features.py  gunicorn_plot.py  logger.py  main.py  metrics.py  modelling.py  playground.ipynb  plot.py  plot_bokeh.py  scheduled_procurement.py  temp.py  tune.py  utils.py
(+5 files in other folders)
