[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-trading-analysis"
version = "1.0.0"
description = "Energy Trading Day-Ahead Price Analysis & Procurement Optimization"
authors = [{name = "Energy Trading Modelling"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["energy", "trading", "electricity", "prices", "optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "entsoe-py==0.7.8",
]

[project.urls]
Homepage = "https://github.com/yourusername/energy-trading-analysis"
Repository = "https://github.com/yourusername/energy-trading-analysis.git"
Documentation = "https://github.com/yourusername/energy-trading-analysis#readme"
"Bug Tracker" = "https://github.com/yourusername/energy-trading-analysis/issues"

[project.scripts]
energy-analysis = "modelling:main"

[tool.setuptools]
py-modules = ["modelling"]